--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,31 +3,6 @@ set(example_dirs audio core models shaders shapes text textures)
 set(example_sources)
 set(example_resources)
 
-# C++
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
-# raylib
-find_package(raylib QUIET)
-if (NOT raylib_FOUND)
-    include(FetchContent)
-        FetchContent_Declare(
-        raylib
-        GIT_REPOSITORY https://github.com/raysan5/raylib.git
-        GIT_TAG ae50bfa2cc569c0f8d5bc4315d39db64005b1b08
-        GIT_SHALLOW 1
-    )
-    FetchContent_GetProperties(raylib)
-    if (NOT raylib_POPULATED) # Have we downloaded raylib yet?
-        set(FETCHCONTENT_QUIET NO)
-        FetchContent_Populate(raylib)
-        set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-        set(BUILD_GAMES    OFF CACHE BOOL "" FORCE)
-        add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
-    endif()
-endif()
-
 # Find all examples
 foreach(example_dir ${example_dirs})
     file(GLOB sources ${example_dir}/*.cpp)
@@ -46,9 +21,11 @@ foreach(example_source ${example_sources})
 
     # Setup the example
     add_executable(${example_name} ${example_source})
+    target_link_libraries(${example_name} PRIVATE project_warnings project_options)
 
     # Link raylib and raylib-cpp
-    target_link_libraries(${example_name} PUBLIC raylib_cpp raylib)
+    target_link_libraries(${example_name} PUBLIC raylib_cpp)
+    target_link_system_libraries(${example_name} PUBLIC raylib)
 
     string(REGEX MATCH ".*/.*/" resources_dir ${example_source})
     string(APPEND resources_dir "resources")
