--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -3,5 +3,10 @@ root=..
 linelength=120
 exclude_files=vendor
 exclude_files=docs
+exclude_files=build
+exclude_files=cmake-build-*
 filter=-runtime/explicit
 filter=-legal/copyright
+exclude_files=src/extras/raylib-cpp-assets/include/zip_file.hpp
+extensions=hpp,cpp
+headers=hpp
