--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,49 +1,49 @@
 add_library(raylib_cpp INTERFACE)
 
 set(RAYLIB_CPP_HEADERS
-  AudioDevice.hpp
-  AudioStream.hpp
-  AutomationEventList.hpp
-  BoundingBox.hpp
-  Camera2D.hpp
-  Camera3D.hpp
-  Color.hpp
-  FileData.hpp
-  FileText.hpp
-  Font.hpp
-  Functions.hpp
-  Gamepad.hpp
-  Image.hpp
-  Keyboard.hpp
-  Material.hpp
-  Matrix.hpp
-  Mesh.hpp
-  MeshUnmanaged.hpp
-  Model.hpp
-  ModelAnimation.hpp
-  Mouse.hpp
-  Music.hpp
-  Ray.hpp
-  RayCollision.hpp
-  RaylibException.hpp
-  raylib-cpp-utils.hpp
-  raylib-cpp.hpp
-  raylib.hpp
-  raymath.hpp
-  Rectangle.hpp
-  RenderTexture.hpp
-  Shader.hpp
-  Sound.hpp
-  Text.hpp
-  Texture.hpp
-  TextureUnmanaged.hpp
-  Touch.hpp
-  Vector2.hpp
-  Vector3.hpp
-  Vector4.hpp
-  VrStereoConfig.hpp
-  Wave.hpp
-  Window.hpp
+    raylib-cpp/AudioDevice.hpp
+    raylib-cpp/AudioStream.hpp
+    raylib-cpp/AutomationEventList.hpp
+    raylib-cpp/BoundingBox.hpp
+    raylib-cpp/Camera2D.hpp
+    raylib-cpp/Camera3D.hpp
+    raylib-cpp/Color.hpp
+    raylib-cpp/FileData.hpp
+    raylib-cpp/FileText.hpp
+    raylib-cpp/Font.hpp
+    raylib-cpp/Functions.hpp
+    raylib-cpp/Gamepad.hpp
+    raylib-cpp/Image.hpp
+    raylib-cpp/Keyboard.hpp
+    raylib-cpp/Material.hpp
+    raylib-cpp/Matrix.hpp
+    raylib-cpp/Mesh.hpp
+    raylib-cpp/MeshUnmanaged.hpp
+    raylib-cpp/Model.hpp
+    raylib-cpp/ModelAnimation.hpp
+    raylib-cpp/Mouse.hpp
+    raylib-cpp/Music.hpp
+    raylib-cpp/Ray.hpp
+    raylib-cpp/RayCollision.hpp
+    raylib-cpp/RaylibException.hpp
+    raylib-cpp/raylib-cpp-utils.hpp
+    raylib-cpp.hpp
+    raylib-cpp/raylib.hpp
+    raylib-cpp/raymath.hpp
+    raylib-cpp/Rectangle.hpp
+    raylib-cpp/RenderTexture.hpp
+    raylib-cpp/Shader.hpp
+    raylib-cpp/Sound.hpp
+    raylib-cpp/Text.hpp
+    raylib-cpp/Texture.hpp
+    raylib-cpp/TextureUnmanaged.hpp
+    raylib-cpp/Touch.hpp
+    raylib-cpp/Vector2.hpp
+    raylib-cpp/Vector3.hpp
+    raylib-cpp/Vector4.hpp
+    raylib-cpp/VrStereoConfig.hpp
+    raylib-cpp/Wave.hpp
+    raylib-cpp/Window.hpp
 )
 
 # Include Directory
