--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Executable
 add_executable(raylib_cpp_test raylib_cpp_test.cpp)
 target_include_directories(raylib_cpp_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(raylib_cpp_test PRIVATE project_warnings project_options)
+target_link_libraries(raylib_cpp_test PRIVATE raylib_cpp_project_warnings raylib_cpp_project_options)
 if (MSVC)
     target_compile_options(raylib_cpp_test PRIVATE /Wall /W4)
 else()
@@ -15,7 +15,7 @@ target_compile_options(raylib_cpp_test PRIVATE -fexceptions)
 
 add_executable(raylib_cpp_expected_test raylib_cpp_expected_test.cpp)
 target_include_directories(raylib_cpp_expected_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(raylib_cpp_expected_test PRIVATE project_warnings project_options)
+target_link_libraries(raylib_cpp_expected_test PRIVATE raylib_cpp_project_warnings raylib_cpp_project_options)
 if (MSVC)
     target_compile_options(raylib_cpp_expected_test PRIVATE /Wall /W4)
 else()
@@ -24,7 +24,7 @@ endif()
 target_link_libraries(raylib_cpp_expected_test PRIVATE raylib_cpp raylib_cpp_test_helper)
 target_link_system_libraries(raylib_cpp_expected_test PRIVATE raylib tl::expected)
 target_link_system_libraries(raylib_cpp_expected_test PRIVATE Catch2::Catch2 Catch2::Catch2WithMain)
-target_compile_options(raylib_cpp_expected_test PRIVATE -fno-exceptions)
+target_link_libraries(raylib_cpp_expected_test PRIVATE raylib_cpp_project_options_no_exceptions)
 #target_compile_options(raylib_cpp_expected_test PRIVATE -Wno-shadow)
 target_compile_definitions(raylib_cpp_expected_test PRIVATE RAYLIB_CPP_INCLUDE_EXPECTED=<tl/expected.hpp>)
 target_compile_definitions(raylib_cpp_expected_test PRIVATE RAYLIB_CPP_EXPECTED=tl::expected)
@@ -41,7 +41,7 @@ catch_discover_tests(raylib_cpp_expected_test)
 if(BUILD_RAYLIB_CPP_EXTRAS)
 add_executable(raylib_cpp_assets_test raylib_cpp_assets_test.cpp)
 target_include_directories(raylib_cpp_assets_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(raylib_cpp_assets_test PRIVATE project_warnings project_options)
+target_link_libraries(raylib_cpp_assets_test PRIVATE raylib_cpp_project_warnings raylib_cpp_project_options)
 target_link_libraries(raylib_cpp_assets_test PRIVATE raylib_cpp raylib_cpp_test_helper)
 target_link_system_libraries(raylib_cpp_assets_test PRIVATE raylib)
 target_link_system_libraries(raylib_cpp_assets_test PRIVATE Catch2::Catch2 Catch2::Catch2WithMain)
@@ -49,7 +49,7 @@ target_link_libraries(raylib_cpp_assets_test PRIVATE raylib-cpp-assets)
 
 add_executable(raylib_cpp_assets_expected_test raylib_cpp_assets_expected_test.cpp)
 target_include_directories(raylib_cpp_assets_expected_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(raylib_cpp_assets_expected_test PRIVATE project_warnings project_options)
+target_link_libraries(raylib_cpp_assets_expected_test PRIVATE raylib_cpp_project_warnings raylib_cpp_project_options)
 target_link_libraries(raylib_cpp_assets_expected_test PRIVATE raylib_cpp raylib_cpp_test_helper)
 target_link_system_libraries(raylib_cpp_assets_expected_test PRIVATE raylib)
 target_link_system_libraries(raylib_cpp_assets_expected_test PRIVATE Catch2::Catch2 Catch2::Catch2WithMain)
@@ -57,7 +57,7 @@ target_link_libraries(raylib_cpp_assets_expected_test PRIVATE raylib-cpp-assets)
 target_compile_definitions(raylib_cpp_expected_test PRIVATE RAYLIB_CPP_INCLUDE_EXPECTED=<tl/expected.hpp>)
 target_compile_definitions(raylib_cpp_expected_test PRIVATE RAYLIB_CPP_EXPECTED=tl::expected)
 target_compile_definitions(raylib_cpp_expected_test PRIVATE RAYLIB_CPP_UNEXPECTED=tl::unexpected)
-target_compile_options(raylib_cpp_expected_test PRIVATE -fno-exceptions)
+target_link_libraries(raylib_cpp_expected_test PRIVATE raylib_cpp_project_options_no_exceptions)
 endif()
 
 # Copy all the resources
